1.增加一个外部可直接获取通知和状态的管理类UniteVpnManager 2.增加外部可调用Vpn连接和断开的操作类 3.增加组件UniteVpnStatusService，用来管理和实现Vpn实例创建以及调用连接取消，状态信息同步等，并开启通知 4.新增vpn状态回调接口和流量数据回调接口 5.完成vpnProvider类对开源协议的初始化准备工作

--- a/unitevpn/src/main/AndroidManifest.xml
+++ b/unitevpn/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
             android:authorities="${applicationId}.androidx-startup"
             android:exported="false"
             tools:node="merge">
-            <meta-data  android:name="com.core.unitevpn.VpnStartUp"
+            <meta-data  android:name="com.core.unitevpn.UniteVpnStartUp"
                 android:value="androidx.startup" />
         </provider>
+
+        <service android:name=".UniteVpnStatusService"/>
     </application>
 
 </manifest>
